# exengine

./: CMakeLists.txt  README.md  beczka.cpp  testsuite.cpp
include/: connectors.h  exchange.h  threadable.h  tradingtool.h
src/: .exchange.cpp.swp  exchange.cpp  threadable.cpp  tradingtool.cpp
